-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.3
-
None
-
-
986de654b (dev), 2bc6b25c5 (6.7), e9431e34a (6.6)
I have two monitors. Attaching toplevels to a parent only works if the parent is on the left monitor.
The attached video shows attaching not working on the right monitor. This was recorded on jay which is an independent compositor. But the behavior is the same on plasma 6. So likely a bug in QT.
| For Gerrit Dashboard: QTBUG-122949 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 545414,2 | client: Report correct coordinates during drag | dev | qt/qtwayland | Status: ABANDONED | -2 | 0 |
| 545459,2 | Map drag event positions to global during dock/toolbar drag | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 545628,2 | Map drag event positions to global during dock/toolbar drag | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
| 545838,2 | Map drag event positions to global during dock/toolbar drag | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |